--- a/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
@@ -60,7 +60,7 @@ If you want to add row action buttons, then you can use the `renderRowActions` p
   renderRowActions={(row, index) => (
     <Box>
       <IconButton onClick={() => console.info('Edit')}>
-        <EditIcon />
+        <IconEdit />
       </IconButton>
       <IconButton onClick={() => console.info('Delete')}>
         <DeleteIcon />
