start working on docs site mui to mantine conversions

--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -14,11 +14,11 @@ import { FAQs } from '../../../components/mdx/FAQs';
 >
 > Just double-check that you have the following in your package.json, or use the [full install commands](<#install-with-required-peer-dependencies-(recommended)>) below.
 >
-> 1.  `@mui/material` (v5)
-> 2.  `@mui/icons-material` (v5)
-> 3.  `@emotion/react` (v11)
-> 4.  `@emotion/styled` (v11)
-> 5.  `react` and `react-dom` (v17 or v18) - MUI v5 requires React 17 or 18
+> 1.  `@mantine/core` (v5)
+> 2.  `@mantine/hooks` (v5)
+> 3.  `@tabler/icons` (> v1.118)
+> 4.  `@emotion/react` (v11)
+> 5.  `react` and `react-dom` (v17 or v18)
 
 ### Quick Install
 
@@ -45,19 +45,19 @@ yarn add mantine-react-table
 NPM
 
 ```bash
-npm install mantine-react-table @mui/material @mui/icons-material @emotion/react @emotion/styled
+npm install mantine-react-table @mantine/core @mantine/hooks @tabler/icons @emotion/react
 ```
 
 PNPM
 
 ```bash
-pnpm add mantine-react-table @mui/material @mui/icons-material @emotion/react @emotion/styled
+pnpm add mantine-react-table @mantine/core @mantine/hooks @tabler/icons @emotion/react
 ```
 
 Yarn
 
 ```bash
-yarn add mantine-react-table @mui/material @mui/icons-material @emotion/react @emotion/styled
+yarn add mantine-react-table @mantine/core @mantine/hooks @tabler/icons @emotion/react
 ```
 
 > You do NOT need to install `@tanstack/react-table`, as it is already an internal dependency of `mantine-react-table`.
