more docs mui to mantine conversions

--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -45,19 +45,19 @@ yarn add mantine-react-table
 NPM
 
 ```bash
-npm install mantine-react-table @mantine/core @mantine/hooks @tabler/icons @emotion/react
+npm install mantine-react-table @mantine/core @mantine/hooks @emotion/react @tabler/icons
 ```
 
 PNPM
 
 ```bash
-pnpm add mantine-react-table @mantine/core @mantine/hooks @tabler/icons @emotion/react
+pnpm add mantine-react-table @mantine/core @mantine/hooks @emotion/react @tabler/icons
 ```
 
 Yarn
 
 ```bash
-yarn add mantine-react-table @mantine/core @mantine/hooks @tabler/icons @emotion/react
+yarn add mantine-react-table @mantine/core @mantine/hooks @emotion/react @tabler/icons
 ```
 
 > You do NOT need to install `@tanstack/react-table`, as it is already an internal dependency of `mantine-react-table`.
