--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -3,7 +3,7 @@ import RootPropTable from '../../../components/prop-tables/RootPropTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import ThemeExample from '../../../examples/mui-theme';
 import CustomizeStylesExample from '../../../examples/customize-table-styles';
-import { Box } from '@mui/material';
+import { Box } from '@mantine/core';
 
 <Head>
   <title>{'Customize (Style) Components Guide - Mantine React Table Docs'}</title>
@@ -218,7 +218,7 @@ return (
 - `theme.palette.info.main` - used in the Toolbar Alert Banner and the Toolbar DropZone component
 - `theme.palette.primary.main` - used as the primary color for anything colorful in the table (input fields, checkboxes, dragging borders, etc.)
 
-Notice that by default, the <Box component="span" sx={{color: "secondary.main", display: 'inline'}}>secondary color</Box> isn't used at all. Remember though that you can always override which color a component uses by passing in a `mantine...Props` prop, like how we changed checkboxes to use the secondary color in the [example above](#static-prop-objects).
+Notice that by default, the <Box component="span" sx={{color: "teal", display: 'inline'}}>secondary color</Box> isn't used at all. Remember though that you can always override which color a component uses by passing in a `mantine...Props` prop, like how we changed checkboxes to use the secondary color in the [example above](#static-prop-objects).
 
 #### Custom MUI Theme Example
 
