progress on home page conversion

--- a/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
@@ -1,6 +1,6 @@
 import Head from 'next/head';
 import RootPropTable from '../../../components/prop-tables/RootPropTable';
-// import LocaleExamples from '../../../example-groups/LocaleExamples';
+import LocaleExamples from '../../../example-groups/LocaleExamples';
 
 <Head>
   <title>Localization/i18n Guide - Mantine React Table Docs</title>
@@ -30,7 +30,7 @@ The following locales are included and can be imported from `'mantine-react-tabl
 
 Scroll and find your language below to see an example of how to use it.
 
-{/* <LocaleExamples /> */}
+<LocaleExamples />
 
 ### Custom Non-Built-In Translations
 
