add yellow/orange logo to docs

--- a/apps/mantine-react-table-docs/pages/docs/guides/memoize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/memoize-components.mdx
@@ -2,7 +2,7 @@ import Head from 'next/head';
 import MemoizeCellsExample from '../../../examples/memoize-cells';
 import MemoizeRowsExample from '../../../examples/memoize-rows';
 import MemoizeTableBodyExample from '../../../examples/memoize-table-body';
-import Box from '@mui/material/Box';
+import {Box} from '@mantine/core';
 
 <Head>
   <title>Memoize Components Guide - Mantine React Table Docs</title>
