convert agg and advanced examples

--- a/apps/mantine-react-table-docs/pages/docs/guides/data-columns.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/data-columns.mdx
@@ -157,7 +157,7 @@ const columns = useMemo(
       Footer: () => (
         <Stack>
           Max Age:
-          <Box color="warning.main">{Math.round(maxAge)}</Box>
+          <Box color="orange">{Math.round(maxAge)}</Box>
         </Stack>
       ),
     },
