progress on converting more examples

--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-toolbars.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-toolbars.mdx
@@ -118,7 +118,7 @@ In all of these `render...` props, you get access to the underlying `table` inst
   renderBottomToolbarCustomActions={({ table }) => (
     <Button
       variant="contained"
-      color="primary"
+      color="lightblue"
       //extract all selected rows from the table instance and do something with them
       onClick={() => handleDownloadRows(table.getSelectedRowModel().rows)}
     >
