work on copy buttons

--- a/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
@@ -64,7 +64,7 @@ The click to copy feature is built on top of the Material UI Button component. Y
   enableClickToCopy
   mantineCopyButtonProps={{
     sx: { width: '100%' },
-    startIcon: <ContentCopy />,
+    leftIcon: <ContentCopy />,
   }}
 />
 ```
