--- a/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
@@ -23,7 +23,7 @@ While you are fetching your data, you may want to show some loading indicators. 
 
 <RootPropTable
   onlyProps={
-    new Set(['mantineSkeletonProps', 'mantineLinearProgressProps'])
+    new Set(['mantineSkeletonProps', 'mantineProgressProps'])
   }
 />
 
@@ -61,7 +61,7 @@ If you do not want both progress bars and cell skeletons to show, you can use th
 
 ### Customize Linear Progress Bars
 
-You can customize the linear progress bars by passing props to the `mantineLinearProgressProps` prop.
+You can customize the linear progress bars by passing props to the `mantineProgressProps` prop.
 
 <LinearProgressExample />
 
