--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -29,7 +29,7 @@ All props labeled `mantine...Props` get forwarded to Material UI components. Her
       'mantineBottomToolbarProps',
       'mantineExpandAllButtonProps',
       'mantineExpandButtonProps',
-      'mantineLinearProgressProps',
+      'mantineProgressProps',
       'mantineSearchTextInputProps',
       'mantineSelectAllCheckboxProps',
       'mantineSelectCheckboxProps',
