--- a/apps/mantine-react-table-docs/pages/docs/guides/editing.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/editing.mdx
@@ -99,7 +99,7 @@ To save data, you must hook up either the `onBlur`, `onChange`, etc. events your
 
 ### Customizing Editing Components
 
-You can pass any MUI TextField Props with the `mantineEditTextInputProps` prop.
+You can pass any Mantine TextInput Props with the `mantineEditTextInputProps` prop.
 
 ```tsx
 const columns = [
