--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -1,7 +1,7 @@
 import Head from 'next/head';
 import RootPropTable from '../../../components/prop-tables/RootPropTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
-// import ThemeExample from '../../../examples/mui-theme';
+import ThemeExample from '../../../examples/mui-theme';
 import CustomizeStylesExample from '../../../examples/customize-table-styles';
 import { Box } from '@mantine/core';
 
@@ -79,11 +79,11 @@ Some of the column options expose the same props as above, but on a per column b
   }
 />
 
-### Material UI Props and Types
+### Mantine Props and Types
 
 Each prop can either be passed as an object or as a callback function where you get access to the underlying `table` instance and any other relevant callback parameters, such as `cell`, `row`, `column`, etc. This lets you easily run conditional logic on the props you pass. Let's take a look at a few examples.
 
-> All `mantine...Props` props are strongly typed and you should get ts hints as you write them. API docs are available on the [Material UI website](https://mui.com/material-ui/api/table/) for each component.
+> All `mantine...Props` props are strongly typed and you should get ts hints as you write them. API docs are available on the [Mantine website](https://mantine.dev/) for each component.
 
 #### Static Prop Objects
 
@@ -94,7 +94,7 @@ Each prop can either be passed as an object or as a callback function where you 
   enableRowSelection
   //passing the static object variant if no dynamic logic is needed
   mantineSelectCheckboxProps={{
-    color: 'secondary', //makes all checkboxes use the secondary color
+    color: 'violet', //makes all checkboxes use a different color other than the primaryColor
   }}
 />
 ```
@@ -108,13 +108,13 @@ Each prop can either be passed as an object or as a callback function where you 
   enableRowSelection
   //passing the callback function variant. (You should get type hints for all the callback parameters available)
   mantineSelectCheckboxProps={({ row }) => ({
-    color: 'secondary',
+    color: 'violet',
     disabled: row.original.isAccountLocked, //access the row data to determine if the checkbox should be disabled
   })}
 />
 ```
 
-### Styling Material UI Components
+### Styling Mantine Components
 
 Each `mantine...Prop` has multiple options for you to add styling to the component. You could simply pass `className` or `style` props to any `mui...Props` prop, but there is also the `sx` prop...which totally rocks!
 
@@ -122,7 +122,7 @@ Each `mantine...Prop` has multiple options for you to add styling to the compone
 
 #### The SX Prop
 
-The recommended way to style Material UI components in Mantine React Table will be the [`sx` prop](https://mui.com/system/basics/#the-sx-prop) throughout this docs site, as it is both the most simple and the most powerful way to style Material UI components as of Material UI V5. They can work and be as simple as a `style` prop, but behind the scenes, they work more like emotion styled-components by using `mui/system`.
+The recommended way to style Mantine components in Mantine React Table will be the [`sx` prop](https://mantine.dev/styles/sx/) throughout this docs site, as it is both the most simple and the most powerful way to style Mantine components. They can work and be as simple as a `style` prop, but behind the scenes, they work more like emotion styled-components by using Emotion.
 
 Don't worry, `className` and `style` props will still work, but let's show off some of the more elegant syntax you can use with the `sx` prop.
 
@@ -142,7 +142,7 @@ Don't worry, `className` and `style` props will still work, but let's show off s
 />
 ```
 
-2. The `sx` prop gets easy access to your _muiTheme_ without you having to call the theme from a `useTheme` hook.
+2. The `sx` prop gets easy access to your _mantineTheme_ without you having to call the theme from a `useMantineTheme` hook.
 
 ```jsx
 <MantineReactTable
@@ -151,7 +151,7 @@ Don't worry, `className` and `style` props will still work, but let's show off s
   mantineTableHeadCellProps={{
     //no useTheme hook needed, just use the `sx` prop with the theme callback
     sx: (theme) => ({
-      color: theme.palette.gray,
+      color: theme.colors.red[5],
     }),
   }}
 />
@@ -166,21 +166,18 @@ Don't worry, `className` and `style` props will still work, but let's show off s
   mantineTableHeadCellProps={{
     //easier way to create media queries, no useMediaQuery hook needed.
     sx: {
-      fontSize: {
-        xs: '10px',
-        sm: '11px',
-        md: '12px',
-        lg: '13px',
-        xl: '14px',
+      fontSize: '14px',
+      '@media (min-width: 600px)': {
+        fontSize: '12px',
       },
     },
   }}
 />
 ```
 
-There are many more advantages to using the `sx` prop, but that is all we will discuss in these docs. You can learn more about it the official [Material UI Docs](https://mui.com/system/getting-started/the-sx-prop/).
+There are many more advantages to using the `sx` prop, but that is all we will discuss in these docs. You can learn more about it the official [Mantine Docs](https://mantine.dev/styles/sx/).
 
-### Material UI Theme
+### Mantine Theme
 
 Mantine React Table respects your MUI Theme. If you have already set up Material UI and a global MUI Theme, you should already be set. But if you have not, you should visit the offical [Material UI Theming Docs](https://mui.com/material-ui/customization/theming/) to learn how to set that up.
 
@@ -197,34 +194,46 @@ function App() {
 
 #### Customize Theme Just for your Table
 
-Thanks to Material UI allowing you to [nest multiple Theme Providers](https://mui.com/material-ui/customization/theming/#nesting-the-theme), you can change your MUI Theme just for the `<MantineReactTable />` component by wrapping a `<ThemeProvider theme={createTheme(...)}>` around just your table. The values in this theme will only effect the `<MantineReactTable />` component, and not the rest of your site. It will also inherit values from your global theme, so you do not have to redefine everything again. You can just tweak the values you want to change.
+Thanks to Mantine allowing you to [nest multiple Theme Providers](https://mantine.dev/theming/mantine-provider/#nested-mantineproviders), you can change your Mantine Theme just for the `<MantineReactTable />` component by wrapping a `<MantineProvider theme={{...}}>` around just your table. The values in this theme will only effect the `<MantineReactTable />` component, and not the rest of your site. It will also inherit values from your global theme, so you do not have to redefine everything again. You can just tweak the values you want to change.
 
-{/* ```jsx
-import { createTheme, ThemeProvider } from '@mantine/core';
+```jsx
+import { MantineProvider } from '@mantine/core';
 //in one of your normal components
 return (
-  <ThemeProvider theme={createTheme({...})}>
+  <MantineProvider
+    theme={{
+      primaryColor: 'blue',
+      primaryShade: 8,
+      colors: {
+        blue: [
+          //define 9 custom blue shades
+        ],
+      },
+    }}
+  >
     <MantineReactTable columns={columns} data={data} />
-  </ThemeProvider>
+  </MantineProvider>
 );
-``` */}
+```
 
 #### Important Theme Values used by Mantine React Table
 
 `<MantineReactTable />` will primarily use the following values internally from your MUI Theme by default:
 
-- `theme.palette.background.default` - used as the background color for most table components by default
-- `theme.palette.divider` - used in dividers in menus and for the column resizing handle
-- `theme.palette.info.main` - used in the Toolbar Alert Banner and the Toolbar DropZone component
-- `theme.colors[theme.primaryColor][getPrimaryShade(theme)]` - used as the primary color for anything colorful in the table (input fields, checkboxes, dragging borders, etc.)
+- `theme.colors[primaryColor[theme.primaryShade]]` - used as the primary color for anything colorful in the table (primary buttons, text inputs, checkboxes, dragging borders, etc.)
+- `theme.colors.gray[3, 7, 8]` - used for some borders
+- `theme.colors.dark[7, 8]` - used as the default backgroundColor for the entire table in dark mode
+- `theme.white` - used as the default backgroundColor for the entire table in light mode
+- `theme.black` - used for some box shadows
 
-Notice that by default, the <Box component="span" sx={{color: "teal", display: 'inline'}}>secondary color</Box> isn't used at all. Remember though that you can always override which color a component uses by passing in a `mantine...Props` prop, like how we changed checkboxes to use the secondary color in the [example above](#static-prop-objects).
+If you want to change some of the colors used by specific components within the table, remember that you can use the `sx` prop in any of the `mantine...Props` to override the default styles.
 
-#### Custom MUI Theme Example
+
+#### Custom Mantine Theme Example
 
 A common use case for this could be if you want to switch your primary and secondary colors, just for this table. Let's take a look at an example that does that, along with some other styling tweaks, so that we can make an ugly table.
 
-{/* <ThemeExample /> */}
+<ThemeExample />
 
 ### Customize Table Paper Styling
 
@@ -235,7 +244,7 @@ You can customize both the props and the styles of the internal `<Paper />` comp
   columns={columns}
   data={data}
   mantinePaperProps={{
-    elevation: 0, //change the mui box shadow
+    shadow: 'lg', //use a larger shadow
     //customize paper styles
     sx: {
       borderRadius: '0',
@@ -247,9 +256,23 @@ You can customize both the props and the styles of the internal `<Paper />` comp
 
 ### Customize Table Body, Rows, Columns, and Cells
 
+Here are a few examples of how you can customize the table body, rows, columns, and cells.
+
 #### Stripe Rows Example
 
-If you need to style many of the rows or columns in a consistent manner, it usually makes sense to style the `<TableBody />` component itself. For example if you want to stripe the rows, you can do something like this:
+Mantine's Table component has a `striped` prop that you can use to stripe the rows. 
+
+```jsx
+<MantineReactTable
+  columns={columns}
+  data={data}
+  mantineTableProps={{
+    striped: true
+  }}
+/>
+```
+
+But if you want to stripe the rows yourself, you can do something like this:
 
 ```jsx
 <MantineReactTable
