remove mui messages

--- a/apps/mantine-react-table-docs/pages/about.mdx
+++ b/apps/mantine-react-table-docs/pages/about.mdx
@@ -126,10 +126,10 @@ Mantine React Table is licensed under the [MIT License](https://github.com/Kevin
       },
       {
         '@type': 'Question',
-        name: 'Is Mantine React Table the same as Material Table?',
+        name: 'Is Mantine React Table the same as Material React Table?',
         acceptedAnswer: {
           '@type': 'Answer',
-          text: '<p><b>No</b>, Mantine React Table is a totally <b>new and different</b> library from <a href="https://material-table.com/" target="_blank">Material Table</a>, <b>written from scratch</b>, with a different API and different features. However, many of the features of material-table were inspirations for this library. I originally wrote this library with the goal to replace all my uses of material-table in my own enterprise applications.</p>',
+          text: 'Kind of. Mantine React Table is a fork of Material React Table. About 80% of their code is the same, since both are built on TanStack Table. But Mantine React Table uses Mantine UI for the front-end instead of Material UI. Both libraries pretty much offer the same features.',
         },
       },
       {
