change some mock data

--- a/apps/mantine-react-table-docs/pages/about.mdx
+++ b/apps/mantine-react-table-docs/pages/about.mdx
@@ -85,7 +85,7 @@ Mantine React Table is licensed under the [MIT License](https://github.com/Kevin
 
 ✅ Sorting (supports client-side and server-side)
 
-✅ Theming (Respects your Material UI Theme)
+✅ Theming (Respects your Mantine Theme)
 
 ✅ Toolbars (Add your own action buttons)
 
