--- a/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
@@ -55,7 +55,7 @@ Alternatively, you can enable click to copy globally by setting the `enableClick
 
 ### Customize Copy Buttons
 
-The click to copy feature is built on top of the Material UI Button component. You can customize the copy button by passing in the `mantineCopyButtonProps` prop or as a column option in a column definition.
+The click to copy feature is built on top of the Mantine UnstyledButton and CopyButton components. You can customize the copy button by passing in the `mantineCopyButtonProps` prop or as a column option in a column definition.
 
 ```tsx
 <MantineReactTable
