--- a/apps/mantine-react-table-docs/pages/docs/guides/event-listeners.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/event-listeners.mdx
@@ -15,9 +15,9 @@ You can pretty much add ANY event listener to ANY component in Mantine React Tab
 
 You can do this by passing props to any of the `mantine...Props` props. This guide gives a few examples of the most common use cases, but there are limitless possibilities.
 
-### Add Event Listeners to any of the Material UI Components
+### Add Event Listeners to any of the Mantine Components
 
-In the [customize components docs](/docs/guides/customize-components#material-ui-prop-types), we explained how to pass any prop you need to pass to any exposed Material UI component that is in the table. The list of props that you can pass to Material UI components includes any event listener.
+In the [customize components docs](/docs/guides/customize-components#mantine-prop-types), we explained how to pass any prop you need to pass to any exposed Mantine component that is in the table. The list of props that you can pass to Mantine components includes any event listener.
 
 Here are a few common examples of some useful event listeners you might want to add to the table, although the possibilities are countless.
 
