--- a/apps/mantine-react-table-docs/pages/docs/api/column-instance-apis.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/column-instance-apis.mdx
@@ -50,7 +50,7 @@ const columns = [
 ];
 
 return (
-  <MaterialTable
+  <MantineReactTable
     columns={columns}
     data={data}
     //or in callback props like this
