--- a/apps/mantine-react-table-docs/pages/docs/api/table-instance-apis.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/table-instance-apis.mdx
@@ -40,7 +40,7 @@ const columns = useMemo(() => [
 ]);
 
 return (
-  <MaterialTable
+  <MantineReactTable
     columns={columns}
     data={data}
     //all callback props have access to the table instance when used like this
