--- a/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
@@ -25,7 +25,7 @@ If you need to, you can customize and replace some or all of the icons with your
 To replace a default icon, specify the icon in the `icons` prop. You should get TS hints for the name of the icons you can replace, but you can also consult [this source file](https://github.com/KevinVandy/mantine-react-table/blob/main/packages/mantine-react-table/src/icons.ts) for a list of all the icons you can replace.
 
 ```jsx
-<MaterialTable
+<MantineReactTable
   columns={columns}
   data={data}
   icons={{
