remove more references of mui from docs

--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-toolbars.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-toolbars.mdx
@@ -154,7 +154,7 @@ The `mantineTopToolbarProps`, `mantineBottomToolbarProps`, `mantineToolbarAlertB
 
 ### Customize Linear Progress Bars
 
-The progress bars that display in both the top and bottom toolbars become visible when either the `isLoading` or `showProgressBars` state options are set to `true`. You can customize the progress bars by passing in props to the `mantineProgressProps` prop. By default, the progress bars have an indeterminate state, but you can set the `value` prop to a number between 0 and 100 to show real progress values if your table is doing some complicated long running tasks that you want to show progress for. Visit the [MUI Linear Progress docs](https://mui.com/material-ui/react-progress/#linear) to learn more.
+The progress bars that display in both the top and bottom toolbars become visible when either the `isLoading` or `showProgressBars` state options are set to `true`. You can customize the progress bars by passing in props to the `mantineProgressProps` prop. By default, the progress bars have an indeterminate state, but you can set the `value` prop to a number between 0 and 100 to show real progress values if your table is doing some complicated long running tasks that you want to show progress for. Visit the [Mantine Progress docs](https://mantine.dev/core/progress/) to learn more.
 
 ```tsx
 <MantineReactTable
