--- a/apps/mantine-react-table-docs/pages/about.mdx
+++ b/apps/mantine-react-table-docs/pages/about.mdx
@@ -17,7 +17,7 @@ Mantine React Table is a fully featured Mantine implementation of TanStack React
 
 ### What is Mantine React Table?
 
-Mantine React Table (MRT) is a fully-feature data grid/table component library for React built on [TanStack Table V8's](https://react-table.tanstack.com/) powerful API. MRT is meant to work best in projects already using [Mantine UI](https://mantine.dev/) components, but it is not necessarily required. However, be aware that [Mantine UI](https://material-ui.com/) and [Emotion](https://emotion.sh/) are required as peer dependencies for MRT to work.
+Mantine React Table (MRT) is a fully-feature data grid/table component library for React built on [TanStack Table V8's](https://react-table.tanstack.com/) powerful API. MRT is meant to work best in projects already using [Mantine UI](https://mantine.dev/) components, but it is not necessarily required. However, be aware that [Mantine UI](https://mantine.dev/) and [Emotion](https://emotion.sh/) are required as peer dependencies for MRT to work.
 
 MRT is built from the ground up in TypeScript, and is designed to have a great type-safe dev experience with generics that react to the data structures you pass in. TypeScript is not at all required to use MRT, but it is recommended for the best and fasted developer experience, especially when defining columns.
 
