--- a/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
@@ -12,9 +12,9 @@ import Example from '../../../examples/font-awesome-icons';
 
 ## Custom Icons Feature Guide
 
-Mantine React Table uses [Material Icons](https://mui.com/material-ui/material-icons) by default for all of its internal icons.
+Mantine React Table uses [Tabler Icons](https://tabler-icons.io/) by default for all of its internal icons.
 
-If you need to, you can customize and replace some or all of the icons with your own custom icons. You can either use other Material Icons or icons from a completely different library.
+If you need to, you can customize and replace some or all of the icons with your own custom icons. You can either use other Tabler Icons or icons from a completely different library.
 
 ### Relevant Props
 
