update react query examples

--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -1,7 +1,7 @@
 import Head from 'next/head';
 import RootPropTable from '../../../components/prop-tables/RootPropTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
-import ThemeExample from '../../../examples/mui-theme';
+import ThemeExample from '../../../examples/mantine-theme';
 import CustomizeStylesExample from '../../../examples/customize-table-styles';
 import { Box } from '@mantine/core';
 
