--- a/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
@@ -56,7 +56,6 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
       'enableColumnFilter',
       'enableColumnFilterModes',
       'filterFn',
-      'filterSelectOptions',
       'filterVariant',
       'mantineFilterTextInputProps',
       'renderColumnFilterModeMenuItems',
@@ -83,10 +82,12 @@ Various subsets of filtering features can be disabled. If you want to disable fi
 Mantine React Table has several built-in filter variants for advanced filtering. These can be specified on a per-column basis using the `filterVariant` option. The following variants are available:
 
 - `'text'` - shows the default text field
-- `'select'` - shows a select dropdown with the options specified in `filterSelectOptions`
-- `'multi-select'` - shows a select dropdown with the options specified in `filterSelectOptions` and allows multiple selections with checkboxes
+- `'select'` - shows a select dropdown with the options specified in `mantineFilterSelectProps.data` array.
+- `'multi-select'` - shows a select dropdown with the options specified in `mantineFilterMultiSelectProps.data` and allows multiple selections with checkboxes
 - `'range` - shows min and max text fields for filtering a range of values
-- `'checkbox'` - shows a checkbox for filtering by `'true'` or `'false'` values (Strings)
+- `'checkbox'` - shows a checkbox for filtering by `'true'` or `'false'` values
+- `'date'` - shows a date picker for filtering by date values
+- `'date-range'` - shows a date range picker for filtering by date ranges
 
 <CustomizeFilterVariantsExample />
 
@@ -274,7 +275,7 @@ Here is the full Remote Data example featuring server-side **filtering**, pagina
 
 <RemoteExample />
 
-### Customize MUI Filter components
+### Customize Mantine Filter Input Components
 
 You can customize the MUI filter components by setting the `mantineFilterTextInputProps` prop or column option.
 
