add links to mui project

--- a/apps/mantine-react-table-docs/pages/docs/examples/remote.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/examples/remote.mdx
@@ -2,7 +2,7 @@ import Head from 'next/head';
 import Example from '../../../examples/remote';
 
 <Head>
-  <title>Remote Data Example - Mantine React Table Docs</title>
+  <title>Remote Data Fetching Example - Mantine React Table Docs</title>
   <meta
     name="description"
     content="An example of Mantine React Table which shows how to fetch remote data and filter and paginate on a remote server"
@@ -17,7 +17,7 @@ import Example from '../../../examples/remote';
   />
 </Head>
 
-## Remote Data Example
+## Remote Data Fetching Example
 
 You will most likely be using a remote data source for your table, which is fully supported. Here is an example of data being fetched from a remote server but also filtered, paginated, and sorted on the server.
 
