--- a/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
@@ -22,7 +22,7 @@ Mantine React Table has full support for localization (i18n). Some locales are i
 
 The following locales are included and can be imported from `'mantine-react-table/locales/'`:
 
-`cs`, `de`, `en`, `es`, `fa`, `fr`, `it`, `nl`, `ja`, `pl`, `pt`, `pt-BR`, `ro`, `ru`, `tr`, `vi`, `zh-Hans`, `zh-Hant`
+`cs`, `da`, `de`, `en`, `es`, `fa`, `fr`, `it`, `nl`, `ja`, `pl`, `pt`, `pt-BR`, `ro`, `ru`, `tr`, `vi`, `zh-Hans`, `zh-Hant`
 
 > If your language is not yet supported, please consider making a PR to add it to the library! See [here on GitHub](https://github.com/KevinVandy/mantine-react-table/tree/main/packages/mantine-react-table/src/_locales).
 
